# swinsian-discord-rich-presence

./: Cargo.toml  README.md  as.scpt  com.coral.swincord.plist  swinsian-apple-script.scpt  swinsian.scpt  swinsian.scptd
as2.scptd/Contents/: Info.plist  Script Debugger.plist
as2.scptd/Contents/Resources/Scripts/: main.recover.rtf  main.scpt
src/: error.rs  main.rs  swinsian.rs
